--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "npm run-script build-prod && cd server && node startHttp.js",
     "start-client": "cd client && react-scripts start",
-    "build": "cd client && REACT_APP_BUILD_TYPE=development react-scripts build",
-    "build-prod": "cd client && REACT_APP_BUILD_TYPE=production react-scripts build",
+    "build": "cd client && react-scripts build",
+    "build-prod": "cd client && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
